--- a/django_girls/blog/templates/blog/add_post.html
+++ b/django_girls/blog/templates/blog/add_post.html
@@ -1,11 +1,24 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Add a New Post</h2>
-  <form method="post" action="">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Save</button>
-  </form>
-  <a href="{% url 'blog:post_list' %}">Back to Posts</a>
+  <div class="card">
+    <div class="card-header">
+      <h2>Add a New Post</h2>
+    </div>
+    <div class="card-body">
+      <form method="post" action="">
+        {% csrf_token %}
+        <div class="form-group">
+          <label for="id_title">Title:</label>
+          {{ form.title }}
+        </div>
+        <div class="form-group">
+          <label for="id_description">Description:</label>
+          {{ form.description }}
+        </div>
+        <button type="submit" class="btn btn-primary">Save</button>
+      </form>
+    </div>
+  </div>
+  <a href="{% url 'blog:post_list' %}" class="btn btn-secondary mt-2">Back to Posts</a>
 {% endblock %}
