--- a/django_girls/blog/templates/blog/post_list.html
+++ b/django_girls/blog/templates/blog/post_list.html
@@ -1,15 +1,23 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Posts</h2>
-  <ul>
-    {% for post in posts %}
-      <li>
-        {{ post.title }} - {{ post.description }} ({{ post.pub_date }})
-        <br>
-        Author: {{ post.author }}
-      </li>
-    {% endfor %}
-  </ul>
-  <a href="{% url 'blog:add_post' %}">Add a New Post</a>
+  <div class="card">
+    <div class="card-header">
+      <h2>Posts</h2>
+    </div>
+    <div class="card-body">
+      <ul class="list-group">
+        {% for post in posts %}
+          <li class="list-group-item">
+            <h4>{{ post.title }}</h4>
+            <p>{{ post.description }}</p>
+            <p class="small text-muted">Author: {{ post.author.username }} - {{ post.pub_date }}</p>
+            <a href="{% url 'blog:update_post' pk=post.pk %}" class="btn btn-primary btn-sm">Update</a>
+            <a href="{% url 'blog:delete_post' pk=post.pk %}" class="btn btn-danger btn-sm">Delete</a>
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
+  <a href="{% url 'blog:add_post' %}" class="btn btn-success mt-2">Add a New Post</a>
 {% endblock %}
