--- a/django_girls/users/templates/users/user_register.html
+++ b/django_girls/users/templates/users/user_register.html
@@ -1,11 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Register</h2>
-  <form method="post" action="">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Register</button>
-  </form>
-  <a href="{% url 'login' %}">Already have an account? Log in here</a>
+  <div class="card">
+    <div class="card-header">
+      <h2>Register</h2>
+    </div>
+    <div class="card-body">
+      <form method="post" action="">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-primary">Register</button>
+      </form>
+    </div>
+  </div>
+  <a href="{% url 'login' %}" class="btn btn-secondary mt-2">Login</a>
 {% endblock %}
