--- a/django_girls/blog/templates/blog/update_post.html
+++ b/django_girls/blog/templates/blog/update_post.html
@@ -7,14 +7,14 @@
     </div>
   {% else %}
     <div class="card">
-      <div class="card-header">
+      <div class="card-header bg-warning text-white">
         <h2>Edit Post</h2>
       </div>
       <div class="card-body">
         <form method="post" action="">
           {% csrf_token %}
           {{ form.as_p }}
-          <button type="submit" class="btn btn-primary">Save Changes</button>
+          <button type="submit" class="btn btn-warning text-white">Save Changes</button>
         </form>
       </div>
     </div>
