--- a/django_girls/blog/templates/blog/post_list.html
+++ b/django_girls/blog/templates/blog/post_list.html
@@ -10,7 +10,8 @@
         {% for post in posts %}
           <li class="list-group-item">
             <h4>{{ post.title }}</h4>
-            <p>{{ post.description }}</p>
+            <!-- Truncate the description to a maximum of 15 words -->
+            <p>{{ post.description|truncatewords:15 }}</p>
             <p class="small text-muted">Author: {{ post.author.username }} - {{ post.pub_date }}</p>
             <a href="{% url 'blog:update_post' pk=post.pk %}" class="btn btn-warning btn-sm text-white">Update</a>
             <a href="{% url 'blog:delete_post' pk=post.pk %}" class="btn btn-danger btn-sm">Delete</a>
