--- a/django_girls/blog/templates/blog/read_more.html
+++ b/django_girls/blog/templates/blog/read_more.html
@@ -1,9 +1,10 @@
+<!-- blog/templates/blog/read_more.html -->
 {% extends 'base.html' %}
 
 {% block content %}
   <div class="card">
     <div class="card-header bg-primary text-white">
-      <h2>{{ post.title }}</h2>
+      <h2 class="text-light">{{ post.title }}</h2>
     </div>
     <div class="card-body">
       <p>{{ post.description }}</p>
